Fixed action button collapse

--- a/src/WebComponents/ActionButton/action-button.scss
+++ b/src/WebComponents/ActionButton/action-button.scss
@@ -9,7 +9,7 @@
         text-align: left;
         height: var(--theme-h1);
         line-height: var(--theme-h1);
-        width: 100%;
+        min-width: 100%;
         white-space: nowrap;
         overflow: hidden;
 
